[NF] add locks to duels