@@ -1,18 +1,24 @@
 package ru.homyakin.seeker.game.duel;
 
 import io.vavr.control.Either;
+
 import java.time.Duration;
 import java.util.List;
+
 import org.springframework.stereotype.Component;
 import ru.homyakin.seeker.game.battle.BattlePersonage;
 import ru.homyakin.seeker.game.battle.two_team.TwoPersonageTeamsBattle;
 import ru.homyakin.seeker.game.duel.models.DuelError;
 import ru.homyakin.seeker.game.duel.models.Duel;
+import ru.homyakin.seeker.game.duel.models.DuelLocked;
 import ru.homyakin.seeker.game.duel.models.DuelResult;
 import ru.homyakin.seeker.game.duel.models.DuelStatus;
 import ru.homyakin.seeker.game.personage.PersonageService;
 import ru.homyakin.seeker.game.models.Money;
 import ru.homyakin.seeker.game.personage.models.Personage;
+import ru.homyakin.seeker.infrastructure.lock.LockPrefixes;
+import ru.homyakin.seeker.infrastructure.lock.LockService;
+import ru.homyakin.seeker.utils.models.Success;
 
 @Component
 public class DuelService {
@@ -20,17 +26,20 @@ public class DuelService {
     private final Duration duelLifeTime;
     private final PersonageService personageService;
     private final TwoPersonageTeamsBattle twoPersonageTeamsBattle;
+    private final LockService lockService;
 
     public DuelService(
         DuelDao duelDao,
         DuelConfig duelConfig,
         PersonageService personageService,
-        TwoPersonageTeamsBattle twoPersonageTeamsBattle
+        TwoPersonageTeamsBattle twoPersonageTeamsBattle,
+        LockService lockService
     ) {
         this.duelDao = duelDao;
         this.duelLifeTime = duelConfig.lifeTime();
         this.personageService = personageService;
         this.twoPersonageTeamsBattle = twoPersonageTeamsBattle;
+        this.lockService = lockService;
     }
 
     //TODO прочитать про transactional
@@ -56,20 +65,34 @@ public class DuelService {
             .orElseThrow(() -> new IllegalStateException("Duel " + duelId + "must exist"));
     }
 
-    public void expireDuel(long duelId) {
-        //TODO проверка на то, что статус был вейтинг
-        returnMoneyToInitiator(duelId);
-        duelDao.updateStatus(duelId, DuelStatus.EXPIRED);
+    public Either<DuelLocked, Success> expireDuel(long duelId) {
+        return lockService.tryLockAndExecute(
+            duelLockKey(duelId),
+            () -> {
+                returnMoneyToInitiator(duelId);
+                duelDao.updateStatus(duelId, DuelStatus.EXPIRED);
+            }
+        ).mapLeft(ignored -> DuelLocked.INSTANCE);
     }
 
-    public void declineDuel(long duelId) {
-        //TODO проверка на то, что статус был не финишд
-        returnMoneyToInitiator(duelId);
-        duelDao.updateStatus(duelId, DuelStatus.DECLINED);
+    public Either<DuelLocked, Success> declineDuel(long duelId) {
+        return lockService.tryLockAndExecute(
+            duelLockKey(duelId),
+            () -> {
+                returnMoneyToInitiator(duelId);
+                duelDao.updateStatus(duelId, DuelStatus.DECLINED);
+            }
+        ).mapLeft(ignored -> DuelLocked.INSTANCE);
     }
 
-    public DuelResult finishDuel(Duel duel) {
-        //TODO проверка на то, что статус был не финишд
+    public Either<DuelLocked, DuelResult> finishDuel(Duel duel) {
+        return lockService.tryLockAndCalc(
+            duelLockKey(duel.id()),
+            () -> finishDuelLogic(duel)
+        ).mapLeft(ignored -> DuelLocked.INSTANCE);
+    }
+
+    private DuelResult finishDuelLogic(Duel duel) {
         duelDao.updateStatus(duel.id(), DuelStatus.FINISHED);
         final var personage1 = personageService.getByIdForce(duel.initiatingPersonageId());
         final var personage2 = personageService.getByIdForce(duel.acceptingPersonageId());
@@ -82,12 +105,12 @@ public class DuelService {
         final BattlePersonage loser;
         switch (battleResult.winner()) {
             case FIRST_TEAM -> {
-                winner = battleResult.firstTeamResult().battlePersonages().get(0);
-                loser = battleResult.secondTeamResult().battlePersonages().get(0);
+                winner = battleResult.firstTeamResult().battlePersonages().getFirst();
+                loser = battleResult.secondTeamResult().battlePersonages().getFirst();
             }
             case SECOND_TEAM -> {
-                winner = battleResult.secondTeamResult().battlePersonages().get(0);
-                loser = battleResult.firstTeamResult().battlePersonages().get(0);
+                winner = battleResult.secondTeamResult().battlePersonages().getFirst();
+                loser = battleResult.firstTeamResult().battlePersonages().getFirst();
             }
             default -> throw new IllegalStateException("Unexpected status");
         }
@@ -98,6 +121,10 @@ public class DuelService {
     private void returnMoneyToInitiator(long duelId) {
         final var initiatingPersonage = personageService.getByIdForce(getByIdForce(duelId).initiatingPersonageId());
         personageService.addMoney(initiatingPersonage, DUEL_PRICE);
+    }
+
+    private String duelLockKey(long duelId) {
+        return LockPrefixes.DUEL.name() + "-" + duelId;
     }
 
     private static final Money DUEL_PRICE = new Money(5);
